Fixes width on mobile devices

--- a/src/css/inputs.less
+++ b/src/css/inputs.less
@@ -13,6 +13,10 @@ input[type=radio] {
     margin: 0;
     box-shadow: 0 0 5px 0 rgba(145, 145, 145, .5);
 
+    @media @mobile {
+      font-size: 13px;
+    }
+
     .alt & {
       background-color: #EFEFEF;
       border: 1px solid white;
