--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -24,7 +24,7 @@ body {
 main.interactive {
   display: block;
   padding: 8px;
-  width: 800px;
+  // width: 800px;
   max-width: 100%;
   margin: auto;
   background: white;
